<resources>
    <string name="app_name">Rios</string>
    <string name="action_settings">Settings</string>
    <string name="homepage_title">Inicio</string>
    <string name="back">Back</string>
    <string name="guardarios">Guarda Rios</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_mapa_rios">Map</string>
    <string name="title_activity_guarda_rios">GuardaRios</string>
    <string name="guardarios_description">Os guarda-rios são aves de pequeno a médio porte, de plumagem colorida e
        pescoço curto. A sua presença no rio é um sinal de boa qualidade ambiental, ajude-nos a recolher fotos e avistamentos!</string>
    <string name="help_us">Ajude-nos!</string>
    <string name="more_info">Mais Informações</string>
    <string name="title_activity_register">Registar</string>
    <string name="title_activity_re">Sign in</string>
    <string name="nome">Nome</string>
    <string name="title_activity_irr__form">IRR_Form</string>
    <string name="title_activity_irr__form2">IRR_Form2</string>
    <string name="title_activity_blank">blank</string>
    <string name="title_activity_blank2">Blank2</string>
    <string name="title_activity_irr_0">IRR_0</string>
    <string name="title_activity_irr_1">IRR_1</string>
    <string name="title_activity_regislogin">Sign in</string>
    <string name="title_activity_irr_1_2">IRR_1_2</string>
    <string name="irr_1_2_4"><![CDATA[Declive <45%]]></string>
    <string name="irr_1_2_5"><![CDATA[5. Suave Composto <45%]]></string>
    <string name="title_activity_irr_1_4">IRR_1_4</string>
    <string name="title_activity_irr_1_5">IRR_1_5</string>
    <string name="irr_1_5_1"><![CDATA[Blocos e tocha (>40cm)]]></string>
    <string name="irr_1_5_5"><![CDATA[Limo (<0.5mm)]]></string>
    <string name="title_activity_irr_1_6">IRR_1_6</string>
    <string name="title_activity_irr_1_7">IRR_1_7</string>
    <string name="title_activity_irr_1_8">IRR_1_8</string>
    <string name="title_activity_irr_2_1">IRR_2_1</string>
    <string name="title_activity_irr_2_2">IRR_2_2</string>
    <string name="title_activity_irr_2_3">IRR_2_3</string>
    <string name="title_activity_irr_2_4">IRR_2_4</string>
    <string name="title_activity_irr_3_1">IRR_3_1</string>
    <string name="title_activity_irr_3_2">IRR_3_2</string>
    <string name="title_activity_irr_4_1">IRR_4_1</string>
    <string name="title_activity_irr_4_2">IRR_4_2</string>
    <string name="title_activity_irr_5_1">IRR_5_1</string>
    <string name="title_activity_irr_5_2">IRR_5_2</string>
    <string name="title_activity_irr_5_3">IRR_5_3</string>
    <string name="title_activity_irr_5_4">IRR_5_4</string>
    <string name="title_activity_irr_5_5">IRR_5_5</string>
    <string name="title_activity_irr_5_6">IRR_5_6</string>
    <string name="title_activity_irr_6_1">IRR_6_1</string>
    <string name="title_activity_irr_6_2">IRR_6_2</string>
    <string name="title_activity_irr_6_3">IRR_6_3</string>
    <string name="title_activity_irr_6_4">IRR_6_4</string>
    <string name="title_activity_irr_7_1">IRR_7_1</string>
    <string name="title_activity_irr_8_1">IRR_8_1</string>
    <string name="title_activity_irr_9_1">IRR_9_1</string>
    <string name="title_activity_irr_10_1">IRR_10_1</string>
    <string name="title_activity_irr_11_1">IRR_11_1</string>
    <string name="title_activity_irr_12_1">IRR_12_1</string>
    <string name="title_activity_irr_2_5">IRR_2_5</string>
    <string name="title_activity_about">About</string>
    <string name="logo_string">Logo</string>
    <string name="title_activity_irr_question">IRR_question</string>
    <string name="title_activity_login_2">Login_2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_info__docs">Info_Docs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link_docs_irr_1"><a href="http://rios.pt/documentos/IRR/HabitatsAnex1.pdf">Habitats naturais e Sítios onde ocorrem</a></string>
    <string name="link_docs_irr_2"><a href="http://rios.pt/documentos/IRR/IRR-%20Question%C3%A1rio.docx">Questionário IRR</a></string>
    <string name="link_docs_irr_3"><a href="http://rios.pt/documentos/IRR/tipologia-de-rios-em-portugal-continental.pdf">Tipologia de rios em Portugal Continental no âmbito da implementação da directiva quadro da água</a></string>
    <string name="link_docs_other_1"><a href="http://repositorio-aberto.up.pt/handle/10216/11051">Tese Mestrado de Pedro Teiga</a></string>
    <string name="link_docs_other_2"><a href="http://repositorio-aberto.up.pt/handle/10216/61206">Tese Doutoramento de Pedro Teiga</a></string>
    <string name="link_docs_other_3"><a href="http://rios.pt/documentos/As%20passagens%20para%20peixes%20em%20Portugal.pdf">As passagens para peixes em Portugal</a></string>
    <string name="link_docs_other_4"><a href="http://rios.pt/documentos/Design%20guideline%20for%20the%20reintroduction%20madeira%20_australia.pdf">Design guideline for the reintroduction of wood into Australian streamsm</a></string>
    <string name="link_docs_other_5"><a href="http://rios.pt/documentos/PNA2015.pdf">Plano Nacional da Água</a></string>
    <string name="link_docs_other_6"><a href="http://rios.pt/documentos/REP-A.Monteiroetal_controlo_cana_IN_MANUAL_RICOVER_2013.pdf">Restauro e gestão ecológica fluvial</a></string>
    <string name="link_docs_other_7"><a href="http://rios.pt/documentos/Rios_B_Restauracion_tcm7-27570.pdf">Restauración de Rios</a></string>
    <string name="title_activity_guarda_rios_form">GuardaRios_form</string>
    <string name="title_activity_sos_rios">Sos_rios</string>
    <string name="title_activity_form_irr">FormIRR</string>
    <string name="title_activity_teste">teste</string>
    <string name="title_activity_tabela_macroinverterbrados">TabelaMacroinverterbrados</string>
    <string name="title_activity_teste_chart">TesteChart</string>
    <string name="title_activity_form_irrswipe">FormIRRSwipe</string>
    <string name="title_activity_view_form_irr">ViewFormIRR</string>
    <string name="title_activity_limpeza">Limpeza</string>
    <string name="title_activity_limpeza_solucoes">LimpezaSolucoes</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_profile_edit">ProfileEditActivity</string>
    <string name="title_activity_rotas_rios_list">RotasRios_list</string>
    <string name="title_activity_mapa__rotas">Mapa_Rotas</string>
    <string name="title_activity_rota_point_show">RotaPoint_show</string>
    <string name="title_activity_actionbarcontrolgridview">GridView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrollistview">ListView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrolrecyclerview">RecyclerView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrolscrollview">ScrollView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrolwebview">WebView &amp; Action Bar</string>
    <string name="title_activity_flexiblespacetoolbarscrollview">Flexible Space</string>
    <string name="title_activity_flexiblespacewithimagewithviewpagertab">Flexible Space</string>
    <string name="title_activity_flexiblespacewithimagewithviewpagertab2">Flexible Space</string>
    <string name="title_activity_flexiblespacewithimagegridview">Flexible Space</string>
    <string name="title_activity_flexiblespacewithimagescrollview">Flexible Space</string>
    <string name="title_activity_fillgap3listview">Another implementation of Fill Gap &amp; ListView</string>
    <string name="title_activity_fillgap3recyclerview">Another implementation of Fill Gap &amp; RecyclerView</string>
    <string name="title_activity_fillgap3scrollview">Another implementation of Fill Gap &amp; ScrollView</string>
    <string name="title_activity_fillgaplistview">Fill Gap &amp; ListView</string>
    <string name="title_activity_fillgaprecyclerview">Fill Gap &amp; RecyclerView</string>
    <string name="title_activity_fillgapscrollview">Fill Gap &amp; ScrollView</string>
    <string name="title_activity_flexiblespacewithimageRecyclerview">Flexible Space</string>
    <string name="title_activity_flexiblespacewithimagelistview">Flexible Space</string>
    <string name="title_activity_flexiblespacewithwebview">Flexible Space</string>
    <string name="title_activity_fragmentactionbarcontrollistview">ListView on Fragment &amp; Action Bar</string>
    <string name="title_activity_fragmenttransition">ActionBar &amp; Toolbar manipulation with Fragment</string>
    <string name="title_activity_handletouchgridview">Handling touch with GridView</string>
    <string name="title_activity_handletouchlistview">Handling touch with ListView</string>
    <string name="title_activity_handletouchrecyclerview">Handling touch with RecyclerView</string>
    <string name="title_activity_handletouchscrollview">Handling touch with ScrollView</string>
    <string name="title_activity_handletouchwebview">Handling touch with WebView</string>
    <string name="title_activity_parallaxtoolbargridview">Parallax gridView &amp; toolbar</string>
    <string name="title_activity_parallaxtoolbarlistview">Parallax listView &amp; toolbar</string>
    <string name="title_activity_parallaxtoolbarscrollview">Parallax scrollView &amp; toolbar</string>
    <string name="title_activity_scrollfrombottomlistview">ListView, scrolling from bottom</string>
    <string name="title_activity_scrollfrombottomrecyclerview">RecyclerView, scrolling from bottom</string>
    <string name="title_activity_slidingupgridview">Sliding up effect with GridView</string>
    <string name="title_activity_slidinguplistview">Sliding up effect with ListView</string>
    <string name="title_activity_slidinguprecyclerview">Sliding up effect with RecyclerView</string>
    <string name="title_activity_slidingupscrollview">Sliding up effect with ScrollView</string>
    <string name="title_activity_slidingupwebview">Sliding up effect with WebView</string>
    <string name="title_activity_stickyheaderlistview">ListView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_stickyheaderrecyclerview">RecyclerView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_stickyheaderscrollview">ScrollView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_stickyheaderwebview">WebView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_toolbarcontrolgridview">GridView &amp; Toolbar</string>
    <string name="title_activity_toolbarcontrollistview">ListView &amp; Toolbar</string>
    <string name="title_activity_toolbarcontrolrecyclerview">RecyclerView &amp; Toolbar</string>
    <string name="title_activity_toolbarcontrolscrollview">ScrollView &amp; Toolbar</string>
    <string name="title_activity_toolbarcontrolwebview">WebView &amp; Toolbar</string>
    <string name="title_activity_viewpagertabfragment">ViewPager &amp; Tab on Fragment</string>
</resources>