<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="700dp" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="engenheiro.rios.Information$PlaceholderFragment"
    android:background="@color/white">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="IRR"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/link_docs_irr_1"
            android:id="@+id/link_docs_irr_1"
            android:layout_below="@+id/imageView11"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textSize="18dp"
            android:autoText="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/link_docs_irr_2"
            android:id="@+id/link_docs_irr_2"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="18dp"
            android:autoText="false"
            android:layout_below="@+id/link_docs_irr_1"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/link_docs_irr_3"
            android:id="@+id/link_docs_irr_3"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="18dp"
            android:autoText="false"
            android:layout_below="@+id/link_docs_irr_2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Outros"
            android:id="@+id/textView26"
            android:layout_below="@+id/link_docs_irr_3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="57dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/link_docs_other_1"
            android:id="@+id/link_docs_other_1"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="18dp"
            android:autoText="false"
            android:layout_below="@+id/textView26"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/link_docs_other_2"
            android:id="@+id/link_docs_other_2"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="18dp"
            android:autoText="false"
            android:layout_below="@+id/link_docs_other_1"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/link_docs_other_3"
            android:id="@+id/link_docs_other_3"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="18dp"
            android:autoText="false"
            android:layout_below="@+id/link_docs_other_2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/link_docs_other_4"
            android:id="@+id/link_docs_other_4"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="18dp"
            android:autoText="false"
            android:layout_below="@+id/link_docs_other_3"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/link_docs_other_5"
            android:id="@+id/link_docs_other_5"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="18dp"
            android:autoText="false"
            android:layout_below="@+id/link_docs_other_4"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/link_docs_other_6"
            android:id="@+id/link_docs_other_6"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="18dp"
            android:autoText="false"
            android:layout_below="@+id/link_docs_other_5"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/link_docs_other_7"
            android:id="@+id/link_docs_other_7"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="18dp"
            android:autoText="false"
            android:layout_below="@+id/link_docs_other_6"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/link_docs_other_8"
            android:layout_marginTop="35dp"
            android:textAlignment="center"
            android:textSize="18dp"
            android:autoText="false"
            android:layout_below="@+id/link_docs_other_7"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</ScrollView>
